Add remote database and minor changes in frontend

--- a/frontend/src/Components/Login/LoginForm.scss
+++ b/frontend/src/Components/Login/LoginForm.scss
@@ -53,7 +53,8 @@ $gr-1:linear-gradient(-250deg, white 0%,white 100%);
 body {
     font-family: "Karla", sans-serif;
     background:$gr-1;
-    min-height: 100vh; }
+    min-height: 100vh; 
+  }
 
   .no-gutters{
     border-radius: 25px;
