Added Blocked User Table and Form

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -252,10 +252,216 @@ body {
   font-weight: 300 !important;
 }
 
-.text-center {
-  margin-left: 34%;
+
+.contact-form{
+  background: #fff;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  width: 100%;
+}
+.contact-form .form-control{
+  border-radius:1rem;
+}
+.contact-image{
+  text-align: center;
+}
+.contact-image img{
+  background-color: #fff;
+  border-radius: 1rem;
+  margin-top: -20%;
+  margin-bottom: 60px;
+  margin-left: 385px;
+  padding: 9px;
 }
 
-.badge {
-  padding-top: 0.4em;
+.contact-form form .row{
+  margin-bottom: -7%;
+}
+
+.contact-form h3{
+  margin-bottom: 8%;
+  margin-top: -20%;
+  text-align: center;
+  color: #343a40!important;
+}
+.btnContact {
+  width: 100%;
+  border: none;
+  border-radius: 1rem;
+  padding: 1.5%;
+  background: #343a40!important;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+}
+.btnContactSubmit
+{
+  width: 50%;
+  border-radius: 1rem;
+  padding: 1.5%;
+  color: #fff;
+  background-color: #343a40!important;
+  border: none;
+  cursor: pointer;
+}
+
+
+:root {
+  --body-bkg: #F0EFE9;
+  --todo-bkg: #FFFFFF;
+  --text-color: #5F6271;
+  --text-unselected-color: #d7d7dc;
+  --control-color: #50E3A4;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.welcome-lading {
+  width: 100%;
+  height: 100%;
+}
+
+.todo-container {
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.18);
+  height: 24em; /*490px*/
+  padding: 2em;
+  position: relative;
+  margin-top: 67px;
+}
+
+.todo-container {
+  background-color: var(--todo-bkg);
+}
+
+header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+header .date {
+  display: flex;
+  justify-content: space-between;
+  width: 22%;
+}
+
+header .date .day-number {
+  font-size: 2em;
+  font-weight: bold;
+  line-height: 1em;
+}
+
+
+/*TODO BODY*/
+main.todo-list {
+  margin-top: 1em;
+}
+
+main.todo-list .tasks-container {
+  overflow-y: auto;
+  max-height: 260px; /*Scroll uando muestra el scroll*/
+}
+
+main.todo-list .tasks-container li.task-container {
+  align-items: center;
+  justify-content: space-between;
+  padding: .7em;
+}
+
+li.task-container.checked p {
+  color: var(--text-unselected-color);
+  text-decoration: line-through;
+  transition: all 500ms ease-in-out;
+}
+
+li.task-container.checked input {
+  border-color: var(--control-color);
+  transition: all 500ms ease-in-out;
+}
+
+input[type="radio"] {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  
+  border: 3px solid var(--text-unselected-color);
+  border-radius: 50%;
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+  outline: none;
+}
+
+button.add-task-btn {
+  background-color: var(--control-color);
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.18);
+  cursor: pointer;
+  height: 90px;
+  width: 90px;
+  position: absolute;
+  bottom: -45px;
+  left: calc(72px - 45px);
+  outline: none;
+  transition: 200ms ease-in-out;
+}
+
+button.add-task-btn span {
+  font-size: 3em;
+  font-weight: bold;
+  color: #46BE8B;
+  font-family: none;
+}
+
+button.add-task-btn:active {
+  transform: scale(.9);
+}
+
+// User Card CSS
+
+.notice {
+  padding: 15px;
+  background-color: #fafafa;
+  border-left: 6px solid #7f7f84;
+  margin-bottom: 10px;
+  -webkit-box-shadow: 0 5px 8px -6px rgba(0,0,0,.2);
+     -moz-box-shadow: 0 5px 8px -6px rgba(0,0,0,.2);
+          box-shadow: 0 5px 8px -6px rgba(0,0,0,.2);
+}
+.notice-sm {
+  padding: 10px;
+  font-size: 80%;
+}
+.notice-lg {
+  padding: 35px;
+  font-size: large;
+}
+.notice-success {
+  border-color: #80D651;
+}
+.notice-success>strong {
+  color: #80D651;
+}
+.notice-info {
+  border-color: #45ABCD;
+}
+.notice-info>strong {
+  color: #45ABCD;
+}
+.notice-warning {
+  border-color: #FEAF20;
+}
+.notice-warning>strong {
+  color: #FEAF20;
+}
+.notice-danger {
+  border-color: #d73814;
+}
+.notice-danger>strong {
+  color: #d73814;
 }
