Add profile Section

--- a/frontend/src/Components/Common/Errors/Error.scss
+++ b/frontend/src/Components/Common/Errors/Error.scss
@@ -57,7 +57,7 @@
     font-weight: 400;
     text-transform: uppercase;
     color: #211b19;
-    background: #fff;
+    background: #e0e0e0;
     padding: 10px 5px;
     margin: auto;
     display: inline-block;
@@ -65,6 +65,7 @@
     bottom: 0px;
     left: 0;
     right: 0;
+    border-radius: 20px;
   }
   
   .notfound a {
